# stronghold-to-castlekeep

./: .clang-format  .gitignore  CMakeLists.txt  README.md  convert.sh  pack.sh  packer.py
src/: CMakeLists.txt  Makefile  gm1.c  gm1.h  image.c  image.h  main.c  tgx.c  tgx.h
